restrict number of background processed to the number of available connections